@@ -3,11 +3,27 @@ plugins {
     id 'application'
 }
 
+test {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
+
 dependencies {
-    compile "com.esotericsoftware:kryonet:2.22.0-RC1"
-    compile project(":DonjinKrawler-Server")
-    compile project(":DonjinKrawler-Common")
+    implementation "com.esotericsoftware:kryonet:2.22.0-RC1"
+    implementation project(":DonjinKrawler-Server")
+    implementation project(":DonjinKrawler-Common")
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
 }
 
 mainClassName = 'donjinkrawler.Client'
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--enable-preview")
+}
